--- a/install
+++ b/install
@@ -1,5 +1,18 @@
 #!/bin/bash
 
-git clone https://github.com/mikemackintosh/dotfiles $HOME/.dotfiles
-cp .bash_profile .bash_profile.orig
-ln -s $HOME/.dotfiles/bash_profile.sh $HOME/.bash_profile
+if [ ! -d $HOME/.dotfiles ]; then
+  git clone https://github.com/mikemackintosh/dotfiles $HOME/.dotfiles
+else
+  cd $HOME/.dotfiles
+  git pull --rebase
+fi
+
+# Backup
+cp $HOME/.bash_profile $HOME/.bash_profile.orig
+
+# Get readlink
+`readlink $HOME/.bash_profile | grep .dotfiles/bash_profile.sh`
+BASH=$?
+if [ $BASH == 1 ]; then
+  ln -s $HOME/.dotfiles/bash_profile.sh $HOME/.bash_profile
+fi
