--- a/install
+++ b/install
@@ -24,6 +24,12 @@ fi
 if [ -f $HOME/.gitconfig ]; then
   cp $HOME/.gitconfig $HOME/.gitconfig.orig
 fi
+if [ -f $HOME/.vim ]; then
+  cp $HOME/.vim $HOME/.vim.orig
+fi
+if [ -f $HOME/.vimrc ]; then
+  cp $HOME/.vimrc $HOME/.vimrc.orig
+fi
 
 # Get readlink
 `readlink $HOME/.bash_profile | grep .dotfiles/bash_profile.sh > /dev/null`
@@ -32,4 +38,6 @@ if [ $BASH == 1 ]; then
   ln -s $HOME/.dotfiles/bash_profile.sh $HOME/.bash_profile
   ln -s $HOME/.dotfiles/atom $HOME/.atom
   ln -s $HOME/.dotfiles/gitconfig $HOME/.gitconfig
+  ln -s $HOME/.dotfiles/vim $HOME/.vim
+  ln -s $HOME/.vim/vimrc $HOME/.vimrc
 fi
