--- a/install
+++ b/install
@@ -30,7 +30,9 @@ fi
 if [ -f $HOME/.vimrc ]; then
   cp $HOME/.vimrc $HOME/.vimrc.orig
 fi
-
+if [ -f $HOME/.curlrc ]; then
+  cp $HOME/curlrc $HOME/.curlrc.org
+fi
 # Get readlink
 `readlink $HOME/.bash_profile | grep .dotfiles/bash_profile.sh > /dev/null`
 BASH=$?
@@ -40,4 +42,5 @@ if [ $BASH == 1 ]; then
   ln -s $HOME/.dotfiles/gitconfig $HOME/.gitconfig
   ln -s $HOME/.dotfiles/vim $HOME/.vim
   ln -s $HOME/.vim/vimrc $HOME/.vimrc
+  ln -s $HOME/.dotfiles/curlrc $HOME/.curlrc
 fi
