--- a/install
+++ b/install
@@ -1,8 +1,5 @@
 #!/bin/bash
 
-# Hide OSX Prompts on login
-touch $HOME/.hushlogin
-
 # Install dotfiles
 if [ ! -d $HOME/.dotfiles ]; then
   git clone https://github.com/mikemackintosh/dotfiles $HOME/.dotfiles
@@ -53,6 +50,14 @@ source ~/.bash_profile.sh
 
 OS=`uname`
 if [[ $OS == 'Darwin' ]]; then
+  install_osx
+fi
+
+install_osx() {
+
+  # Hide OSX Prompts on login
+  touch $HOME/.hushlogin
+
   # Install brew
   brew_install_or_upgrade brew-cask
   brew_install_or_upgrade go
@@ -94,4 +99,4 @@ if [[ $OS == 'Darwin' ]]; then
   brew_cask_install_or_upgrade quicklook-json
   brew_cask_install_or_upgrade vagrant
   brew_cask_install_or_upgrade virtualbox
-done
+}
